Refactor dependency injection to use AbstractFactory for Repositorio instances

--- a/Ecommerce/src/main/resources/templates/produtos.html
+++ b/Ecommerce/src/main/resources/templates/produtos.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<h1>Produtos</h1>
 	<ul>
 		<li th:each="produto : ${produtos}">
 			<a th:text="${produto.nome}" th:href="@{/produtos/{id}(id=${produto.id})}"></a>
