--- a/Ecommerce/src/main/resources/templates/cliente.html
+++ b/Ecommerce/src/main/resources/templates/cliente.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Clientes</title>
+	<title>Cliente</title>
 </head>
 <body>
-	<h1>Clientes</h1>	
+	<h1>Cliente</h1>
+	<h3>Nome: <span th:text="${cliente.nome}"></span></h3>
+	<h4>Valor: R$ <span th:text="${cliente.email}"></span></span></h4>
 </body>
 </html>
