--- a/Ecommerce/src/main/resources/templates/cliente.html
+++ b/Ecommerce/src/main/resources/templates/cliente.html
@@ -9,6 +9,6 @@
 <body>
 	<h1>Cliente</h1>
 	<h3>Nome: <span th:text="${cliente.nome}"></span></h3>
-	<h4>Valor: R$ <span th:text="${cliente.email}"></span></span></h4>
+	<h4>Email: <span th:text="${cliente.email}"></span></span></h4>
 </body>
 </html>
