add ClienteInternet extension

--- a/Ecommerce/src/main/resources/templates/cliente_form.html
+++ b/Ecommerce/src/main/resources/templates/cliente_form.html
@@ -25,6 +25,10 @@
 			Email:
 			<input type="text" th:field="*{email}" />
 		</p>
+		<p>
+			Senha:
+			<input type="password" th:field="*{senha}" />
+		</p>
 		<input type="submit" />
 	</form>	
 </body>
