--- a/Ecommerce/src/main/resources/templates/cliente.html
+++ b/Ecommerce/src/main/resources/templates/cliente.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Cliente</h1>
-	<h3>Nome: <span th:text="${cliente.nome}"></span></h3>
+	<h3>Cpf: <span th:text="${cliente.cpf}"></span></h3>
 	<h4>Email: <span th:text="${cliente.email}"></span></span></h4>
 </body>
 </html>
