Add link to 'se registrar'

--- a/Ecommerce/src/main/resources/templates/produtos.html
+++ b/Ecommerce/src/main/resources/templates/produtos.html
@@ -13,5 +13,7 @@
 			<a th:text="${produto.nome}" th:href="@{/produtos/{id}(id=${produto.id})}"></a>
 		</li>
 	</ul>
+	<a th:href="@{/cliente}">Se registrar</a>
+
 </body>
 </html>
